GA-25 improve sonar scan