@@ -48,7 +48,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 
 import static uk.gov.hmcts.reform.professionalapi.controller.constants.ProfessionalApiConstants.ERROR_MESSAGE_UP_FAILED;
@@ -148,7 +147,7 @@ public class ProfessionalUserServiceImpl implements ProfessionalUserService {
         List<UserConfiguredAccess> userConfiguredAccesses = professionalUsers.stream()
                 .map(ProfessionalUser::getUserConfiguredAccesses)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         GetRefreshUsersResponse res = RefDataUtil.buildGetRefreshUsersResponse(
                 null, professionalUsers, userConfiguredAccesses
@@ -177,7 +176,7 @@ public class ProfessionalUserServiceImpl implements ProfessionalUserService {
         List<UserConfiguredAccess> userConfiguredAccesses = professionalUsers.stream()
                 .map(ProfessionalUser::getUserConfiguredAccesses)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         GetRefreshUsersResponse res = RefDataUtil.buildGetRefreshUsersResponse(
                 professionalUsersPage, professionalUsers, userConfiguredAccesses
@@ -402,7 +401,7 @@ public class ProfessionalUserServiceImpl implements ProfessionalUserService {
             try {
                 List<UserConfiguredAccess> all = userProfileUpdatedData.getUserAccessTypes().stream()
                         .map(a -> mapToUserConfiguredAccess(professionalUser, a))
-                        .collect(Collectors.toList());
+                        .toList();
                 userConfiguredAccessRepository.saveAll(all);
             } catch (Exception ex) {
                 throw new ExternalApiException(HttpStatus.valueOf(500), ERROR_USER_CONFIGURED_CREATE);
